FF3.x print layout bug workaround

--- a/common_services/common_presentation/src/main/webapp/resources/cssFramework/themes/skin_MPG_V3/styles/appearance.css
+++ b/common_services/common_presentation/src/main/webapp/resources/cssFramework/themes/skin_MPG_V3/styles/appearance.css
@@ -110,6 +110,36 @@ body .wrapper, body .footer {
 	background-color:#B1D5DC;
 }
 
+/*FF3.x Print Issue (No more relevant in FF4)*/
+
+@media print {
+				body * {
+						overflow: visible !important;
+						float: none !important;
+						border-top: 0px #FFFFFF !important;
+						border-right: 0px #FFFFFF !important;
+						border-bottom: 0px #FFFFFF !important;
+						border-left: 0px #FFFFFF !important;
+				}
+				.itemHeader, .listItemLine, .blockHeader, .blockHeader *, .itemLine, .itemBlock, .itemBlockContent * {
+						text-align: left !important;
+						float: left !important;
+						clear: both !important;
+						text-indent: 0px !important;
+				}
+				.paginator * {
+						float: left !important;
+				}
+				.blockHeader {
+						font-size: 1.4em !important;
+						margin-bottom: 0.6em !important;
+				}
+				.min_imgBtn, .std_imgBtn, .big_imgBtn, .lineToolSection, .formButtonArea {
+						visibility: hidden !important;
+				}
+}
+
+
 input, button, textarea, select {
     color: #000000;
 }
